--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,28 +1,24 @@
 .page {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  display: flex;
+  flex-direction: column;
   min-height: 100dvh;
-  width: 100vw;
-  color: var(--text-color);
 }
 
 .main {
-  max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem 3rem;
   display: flex;
   flex-direction: column;
   gap: 32px;
-  box-sizing: border-box;
+  width: 100vw;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .hero {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  align-items: center;
+  width: 100%;
+  max-width: none;
+  margin: 0;
   padding: 3rem 0;
-  color: var(--text-color2);
 }
 
 .heroContent {
